resolve Uploaded images with long names get truncated in image manager issue

--- a/src/app/components/image-manager/image-manager.component.scss
+++ b/src/app/components/image-manager/image-manager.component.scss
@@ -13,5 +13,12 @@
 mat-header-cell, mat-cell {
   justify-content: center;
 }
+mat-cell, mat-header-cell, mat-footer-cell {
+  flex: 1;
+  display: flex;
+  align-items: center;
+  overflow: initial;
+  min-height: inherit;
+}
 
   
